helidon-filereader/yaml/servicefile-handler.yaml

apiVersion: v1
kind: Service
metadata:
  name: filehandler
spec:
  type: ClusterIP
  selector:
    app: filehandler
  ports:
    - name: writerport
      protocol: TCP
      port: 8080
    - name: readerport
      protocol: TCP
      port: 8081
